--- a/Help_FrontEnd/src/app/propertylist/propertylist.component.html
+++ b/Help_FrontEnd/src/app/propertylist/propertylist.component.html
@@ -1,1 +1,15 @@
-<p>propertylist works!</p>
+<div class="property-list-wrapper px-2">
+  <div class="container-fluid">
+    <h3 class="text-muted mt-3 mb-4">Available property</h3>
+    <div class="row">
+      <div
+        class="col-6 col-xxl-6 mb-3"
+        *ngFor="let propertyDetail of getResults()"
+      >
+        <app-property-card
+          [propertyDetail]="propertyDetail"
+        ></app-property-card>
+      </div>
+    </div>
+  </div>
+</div>
