--- a/Help_FrontEnd/src/styles.css
+++ b/Help_FrontEnd/src/styles.css
@@ -1,3 +1,7 @@
-body{
-    background-color: pink;
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
+body {
+  font-family: var(--font-family);
 }
