--- a/Help_FrontEnd/src/app/realestatemap/realestatemap.component.html
+++ b/Help_FrontEnd/src/app/realestatemap/realestatemap.component.html
@@ -35,12 +35,12 @@
       </div>
     </map-info-window>
     <map-marker
-  #marker="mapMarker"
-  *ngFor="let markerPosition of markers"
-  [position]="markerPosition"
-  (mapClick)="openInfoWindow(marker)"
-  (mapMouseout)="closeInfoWindow()"
-  (mapMouseover)="openInfoWindow(marker)"
-></map-marker>
+      #marker="mapMarker"
+      *ngFor="let markerPosition of markers"
+      [position]="markerPosition"
+      (mapMouseout)="closeInfoWindow()"
+      (mapMouseover)="openInfoWindow(marker)"
+      (mapClick)="setSelectedPropertyForPopup(marker)"
+    ></map-marker>
   </google-map>
 </div>
