Here is my attempted changes to show the favorites as a separate page

--- a/Help_FrontEnd/src/app/favorite-list/favorite-list.component.html
+++ b/Help_FrontEnd/src/app/favorite-list/favorite-list.component.html
@@ -1,1 +1,6 @@
-<app-favorite-list></app-favorite-list>
+<!-- Example of adding a favorite -->
+<form (ngSubmit)="(favorites)">
+    <!-- Form inputs for favorite properties -->
+    <button type="submit">Save Favorite</button>
+  </form>
+  
