Updated to use corrected api endpoint address for favorites

--- a/Help_FrontEnd/src/app/favorites/favorites.component.html
+++ b/Help_FrontEnd/src/app/favorites/favorites.component.html
@@ -2,6 +2,6 @@
 
 <ul>
   <li *ngFor="let favorite of favorites">
-    {{ favorite.CompleteAddress }}
+    {{ favorite.completeAddress }}
   </li>
 </ul>
