added login functionality

--- a/Help_FrontEnd/src/app/app.component.html
+++ b/Help_FrontEnd/src/app/app.component.html
@@ -1,47 +1,4 @@
 <app-navbar></app-navbar>
-
-<ng-container *ngIf="!getResults().length; else page">
-  <h5>Loading...</h5>
-</ng-container>
-
-<!-- Static views -->
-<ng-template #page>
-  <div class="container-fluid h-100 w-100 d-flex">
-    <div class="row g-0 w-100 d-lg-flex d-none">
-      <div class="col-lg-6 col-0 d-lg-block d-none prop-map">
-        <app-realestatemap
-          (setSelectedProperty)="setSelectedProperty($event)"
-          [properties]="realestate"
-        ></app-realestatemap>
-      </div>
-      <div class="col-lg-6 col-12 prop-list">
-        <app-propertylist
-          (setSelectedProperty)="setSelectedProperty($event)"
-          [properties]="realestate"
-        ></app-propertylist>
-      </div>
-    </div>
-
-    <!-- Switchable views -->
-    <div class="h-100 w-100 d-lg-none d-flex">
-      <ng-container [ngSwitch]="currentView">
-        <app-realestatemap
-          (setSelectedProperty)="setSelectedProperty($event)"
-          [properties]="realestate"
-          *ngSwitchCase="uiView.map"
-        ></app-realestatemap>
-        <app-propertylist
-          (setSelectedProperty)="setSelectedProperty($event)"
-          [properties]="realestate"
-          *ngSwitchCase="uiView.list"
-        ></app-propertylist>
-      </ng-container>
-    </div>
-  </div>
-
-  <app-view-switcher-button
-    (updateView)="switchViews($event)"
-    [currentView]="currentView"
-  ></app-view-switcher-button>
-</ng-template>
-<!-- <app-property-card></app-property-card> -->
+<div class="w-100 d-block h-100">
+  <router-outlet></router-outlet>
+</div>
