--- a/Help_FrontEnd/src/app/review-form/review-form.component.html
+++ b/Help_FrontEnd/src/app/review-form/review-form.component.html
@@ -1,20 +1,20 @@
 <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label for="reviewTitle">Review Title</label>
+    <label for="Title">Review Title</label>
     <input
       type="text"
       class="form-control"
-      id="reviewTitle"
-      formControlName="reviewTitle"
+      id="Title"
+      formControlName="Title"
       required
     />
   </div>
   <div class="form-group">
-    <label for="reviewDetails">Review Details</label>
+    <label for="Detail">Review Details</label>
     <textarea
       class="form-control"
-      id="reviewDetails"
-      fomrControlName="reviewDetails"
+      id="Detail"
+      formControlName="Detail"
       rows="5"
     ></textarea>
   </div>
