Updated review form submission so now all property data is sent to the database with the review.

--- a/Help_FrontEnd/src/app/property-details-modal/property-details-modal.component.html
+++ b/Help_FrontEnd/src/app/property-details-modal/property-details-modal.component.html
@@ -152,7 +152,7 @@
                   [selectedProperty]="propertyDetail"
                 ></app-review-form>
                 <div>
-                  <!-- <form id="rating-form">
+                  <form id="rating-form">
                     <label
                       class="star"
                       for="star5"
@@ -232,7 +232,7 @@
                       value="1"
                       style="display: none"
                     />
-                  </form> -->
+                  </form>
                   <span id="rating-message"></span>
                 </div>
 
