--- a/Help_FrontEnd/src/app/navbar/navbar.component.html
+++ b/Help_FrontEnd/src/app/navbar/navbar.component.html
@@ -13,6 +13,14 @@
           </li>
           <li class="nav-item" *ngIf="!onAuthPage">
             <a
+              [routerLink]="'/contactus'"
+              class="nav-link active"
+              aria-current="page"
+              >contact-us</a
+            >            
+          </li>
+          <li class="nav-item" *ngIf="!onAuthPage">
+            <a
               href="javascript:void(0)"
               class="nav-link active"
               aria-current="page"
